Add complete project management and donation management CRUD part

--- a/app/src/main/res/layout/activity_add_donation.xml
+++ b/app/src/main/res/layout/activity_add_donation.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddDonation"
+    tools:context=".activities.AddDonation"
     android:background="@drawable/back_donation">
 
     <TextView
@@ -33,7 +33,7 @@
         android:background="@drawable/donation_rectangle"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Donor Name: "
+        android:hint="Donor Name: "
         android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -50,7 +50,7 @@
         android:background="@drawable/donation_rectangle"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Donor NIC: "
+        android:hint="Donor NIC: "
         android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -67,7 +67,7 @@
         android:background="@drawable/donation_rectangle"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Donor Mobile no: "
+        android:hint="Donor Mobile no: "
         android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -85,7 +85,7 @@
         android:background="@drawable/donation_rectangle"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Donor Address: "
+        android:hint="Donor Address: "
         android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -102,7 +102,7 @@
         android:background="@drawable/donation_rectangle"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Donation Item(s): "
+        android:hint="Donation Item(s): "
         android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -120,7 +120,7 @@
         android:background="@drawable/donation_rectangle"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Quantity: "
+        android:hint="Quantity: "
         android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -137,7 +137,7 @@
         android:background="@drawable/donation_rectangle"
         android:ems="10"
         android:inputType="date"
-        android:text="Item submission date: "
+        android:hint="Item submission date: "
         android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
