--- a/app/src/main/res/layout/activity_update_donation.xml
+++ b/app/src/main/res/layout/activity_update_donation.xml
@@ -4,50 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UpdateDonation"
-    android:background="@drawable/back_donation"
+    tools:context=".activities.UpdateDonation"
     tools:ignore="ExtraText">
 
-    <TextView
-        android:id="@+id/updateDonation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="105dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="105dp"
-        android:text="Update Donation"
-        android:textColor="@color/black"
-        android:textSize="@dimen/topic_text"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.335"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/up_name"
         android:layout_width="348dp"
         android:layout_height="55dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="44dp"
-        android:layout_marginEnd="11dp"
+        android:layout_marginStart="31dp"
+        android:layout_marginTop="47dp"
+        android:layout_marginEnd="31dp"
         android:background="@drawable/donation_rectangle"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Donor Name: "
         android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/updateDonation" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/up_nic"
         android:layout_width="348dp"
         android:layout_height="55dp"
-        android:layout_marginStart="52dp"
+        android:layout_marginStart="31dp"
         android:layout_marginTop="15dp"
-        android:layout_marginEnd="11dp"
+        android:layout_marginEnd="31dp"
         android:background="@drawable/donation_rectangle"
         android:ems="10"
         android:inputType="textPersonName"
@@ -62,9 +45,9 @@
         android:id="@+id/up_mobile"
         android:layout_width="348dp"
         android:layout_height="55dp"
-        android:layout_marginStart="52dp"
+        android:layout_marginStart="31dp"
         android:layout_marginTop="15dp"
-        android:layout_marginEnd="11dp"
+        android:layout_marginEnd="31dp"
         android:background="@drawable/donation_rectangle"
         android:ems="10"
         android:inputType="textPersonName"
@@ -80,9 +63,9 @@
         android:id="@+id/up_address"
         android:layout_width="348dp"
         android:layout_height="55dp"
-        android:layout_marginStart="52dp"
+        android:layout_marginStart="31dp"
         android:layout_marginTop="15dp"
-        android:layout_marginEnd="11dp"
+        android:layout_marginEnd="31dp"
         android:background="@drawable/donation_rectangle"
         android:ems="10"
         android:inputType="textPersonName"
@@ -97,9 +80,9 @@
         android:id="@+id/up_item"
         android:layout_width="348dp"
         android:layout_height="55dp"
-        android:layout_marginStart="52dp"
+        android:layout_marginStart="31dp"
         android:layout_marginTop="15dp"
-        android:layout_marginEnd="11dp"
+        android:layout_marginEnd="31dp"
         android:background="@drawable/donation_rectangle"
         android:ems="10"
         android:inputType="textPersonName"
@@ -114,9 +97,9 @@
         android:id="@+id/up_quantity"
         android:layout_width="348dp"
         android:layout_height="55dp"
-        android:layout_marginStart="52dp"
+        android:layout_marginStart="31dp"
         android:layout_marginTop="15dp"
-        android:layout_marginEnd="11dp"
+        android:layout_marginEnd="31dp"
         android:background="@drawable/donation_rectangle"
         android:ems="10"
         android:inputType="textPersonName"
@@ -131,9 +114,9 @@
         android:id="@+id/up_date"
         android:layout_width="348dp"
         android:layout_height="55dp"
-        android:layout_marginStart="52dp"
+        android:layout_marginStart="31dp"
         android:layout_marginTop="15dp"
-        android:layout_marginEnd="11dp"
+        android:layout_marginEnd="31dp"
         android:background="@drawable/donation_rectangle"
         android:ems="10"
         android:inputType="date"
