--- a/app/src/main/res/layout/activity_addproject.xml
+++ b/app/src/main/res/layout/activity_addproject.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/back_add"
-    tools:context=".Addproject">
+    tools:context=".activities.Addproject">
 
     <TextView
         android:id="@+id/addproject"
@@ -33,7 +33,7 @@
         android:background="@drawable/rectangle_shape"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/title"
+        android:hint="@string/title"
         android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -50,7 +50,7 @@
         android:background="@drawable/rectangle_shape"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/description"
+        android:hint="@string/description"
         android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -67,7 +67,7 @@
         android:background="@drawable/rectangle_shape"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/projectgoal"
+        android:hint="@string/projectgoal"
         android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -85,7 +85,7 @@
         android:background="@drawable/rectangle_shape"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/duration"
+        android:hint="@string/duration"
         android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -102,7 +102,7 @@
         android:background="@drawable/rectangle_shape"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/status"
+        android:hint="Status :Open / Going/ End"
         android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -119,7 +119,7 @@
         android:background="@drawable/rectangle_shape"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/organizer"
+        android:hint="@string/organizer"
         android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -136,7 +136,7 @@
         android:background="@drawable/rectangle_shape"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/projectcategory"
+        android:hint="@string/projectcategory"
         android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -153,7 +153,7 @@
         android:background="@drawable/rectangle_shape"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/addbeneficiaries"
+        android:hint="@string/addbeneficiaries"
         android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -167,10 +167,26 @@
         android:layout_marginStart="254dp"
         android:layout_marginTop="21dp"
         android:layout_marginEnd="27dp"
-        android:background="@drawable/rectangle_shape"
+        android:background="@color/darkblue"
+        android:textColor="@color/white"
         android:text="@string/save_button"
         android:textSize="@dimen/button"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addbeneficiaries" />
+
+    <Button
+        android:id="@+id/pro_viewbutton"
+        android:layout_width="130dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="72dp"
+        android:background="@color/darkgreen"
+        android:text="@string/view_button"
+        android:textColor="@color/white"
+        android:textSize="@dimen/button"
+        app:layout_constraintEnd_toStartOf="@+id/pro_savebutton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addbeneficiaries" />
 
