--- a/app/src/main/res/layout/activity_updateproject.xml
+++ b/app/src/main/res/layout/activity_updateproject.xml
@@ -4,107 +4,87 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Updateproject"
-    android:background="@drawable/back_add">
+    tools:context=".activities.Updateproject">
 
-    <TextView
-        android:id="@+id/updateproject"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="105dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="105dp"
-        android:text="Update Project"
-        android:textColor="@color/black"
-        android:textSize="@dimen/topic_text"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/up_title"
         android:layout_width="348dp"
         android:layout_height="55dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="44dp"
-        android:layout_marginEnd="11dp"
+        android:layout_marginStart="31dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="31dp"
         android:background="@drawable/rectangle_shape"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="  Title: "
         android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/updateproject" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/up_description"
         android:layout_width="348dp"
         android:layout_height="55dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="11dp"
+        android:layout_marginStart="31dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="31dp"
         android:background="@drawable/rectangle_shape"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="  Description: "
         android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/up_title" />
-
-    <EditText
-        android:id="@+id/up_projectgoal"
-        android:layout_width="348dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="11dp"
-        android:background="@drawable/rectangle_shape"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="  Project Goal: "
-        android:textSize="@dimen/form_field_test"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/up_description" />
-
 
     <EditText
         android:id="@+id/up_duration"
         android:layout_width="348dp"
         android:layout_height="55dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="11dp"
+        android:layout_marginStart="31dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="31dp"
         android:background="@drawable/rectangle_shape"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="  Duration: "
         android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/up_projectgoal" />
+
+
+    <EditText
+        android:id="@+id/up_projectgoal"
+        android:layout_width="348dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="31dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="31dp"
+        android:background="@drawable/rectangle_shape"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="  Project Goal: "
+        android:textSize="@dimen/form_field_test"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/up_description" />
 
     <EditText
         android:id="@+id/up_status"
         android:layout_width="348dp"
         android:layout_height="55dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="11dp"
+        android:layout_marginStart="31dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="31dp"
         android:background="@drawable/rectangle_shape"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="  Status: "
         android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/up_duration" />
 
@@ -112,16 +92,15 @@
         android:id="@+id/up_organizer"
         android:layout_width="348dp"
         android:layout_height="55dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="11dp"
+        android:layout_marginStart="31dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="31dp"
         android:background="@drawable/rectangle_shape"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="  Organizer: "
         android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/up_status" />
 
@@ -129,16 +108,15 @@
         android:id="@+id/up_category"
         android:layout_width="348dp"
         android:layout_height="55dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="11dp"
+        android:layout_marginStart="31dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="31dp"
         android:background="@drawable/rectangle_shape"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="  Project Category: "
         android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/up_organizer" />
 
@@ -146,16 +124,15 @@
         android:id="@+id/up_addbeneficiaries"
         android:layout_width="348dp"
         android:layout_height="55dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="11dp"
+        android:layout_marginStart="31dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="31dp"
         android:background="@drawable/rectangle_shape"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="  Add Beneficiaries: "
         android:textSize="@dimen/form_field_test"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/up_category" />
 
@@ -163,12 +140,12 @@
         android:id="@+id/up_pro_savebutton"
         android:layout_width="130dp"
         android:layout_height="55dp"
-        android:layout_marginStart="254dp"
-        android:layout_marginTop="21dp"
-        android:layout_marginEnd="27dp"
+        android:layout_marginStart="234dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="47dp"
         android:background="@color/darkblue"
-        android:textColor="@color/white"
         android:text="@string/update_button"
+        android:textColor="@color/white"
         android:textSize="@dimen/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
