--- a/app/src/main/res/layout/activity_viewproject.xml
+++ b/app/src/main/res/layout/activity_viewproject.xml
@@ -4,119 +4,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Viewproject"
+    tools:context=".activities.Viewproject"
     android:background="@drawable/back_view">
 
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvProject"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="1dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        tools:listitem="@layout/project_list" />
+
     <TextView
-        android:id="@+id/viewproject"
+        android:id="@+id/tvLoadingData"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="105dp"
+        android:layout_marginStart="127dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="105dp"
+        android:layout_marginEnd="127dp"
         android:text="View Projects"
         android:textColor="@color/black"
         android:textSize="@dimen/topic_text"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/addbutton"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginStart="305dp"
-        android:layout_marginEnd="27dp"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/add_button"
-        android:text="."
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <View
-        android:id="@+id/view"
-        android:layout_width="376dp"
-        android:layout_height="227dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="75dp"
-        android:layout_marginEnd="6dp"
-        android:background="@drawable/rectangle_shape"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/viewproject" />
-
-    <TextView
-        android:id="@+id/view_title"
-        android:layout_width="375dp"
-        android:layout_height="52dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="84dp"
-        android:text="Title - Project 01"
-        android:textSize="25dp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/viewproject" />
-
-    <TextView
-        android:id="@+id/view_duration"
-        android:layout_width="375dp"
-        android:layout_height="58dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginEnd="8dp"
-        android:text="Duration - 06 months"
-        android:textSize="25dp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view_title" />
-
-    <TextView
-        android:id="@+id/view_org"
-        android:layout_width="375dp"
-        android:layout_height="58dp"
-        android:layout_marginStart="26dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="10dp"
-        android:text="Organizer - W.G.Sethmini"
-        android:textSize="25dp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view_duration" />
-
-    <Button
-        android:id="@+id/update"
-        android:layout_width="146dp"
-        android:layout_height="55dp"
-        android:layout_marginEnd="220dp"
-        android:background="@color/darkblue"
-        android:text="@string/update_button"
-        android:textColor="@color/white"
-        android:textSize="@dimen/button"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.488" />
-
-    <Button
-        android:id="@+id/delete"
-        android:layout_width="146dp"
-        android:layout_height="55dp"
-        android:layout_marginEnd="20dp"
-        android:background="@color/darkred"
-        android:text="@string/delete_button"
-        android:textColor="@color/white"
-        android:textSize="@dimen/button"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.488" />
+        app:layout_constraintTop_toTopOf="@+id/rvProject" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
